# adpt-mech-agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test_agent_setup.py
configs/: __init__.py  config.yaml  default.yaml  development.yaml  production.yaml  test.yaml
data/knowledge/: .gitkeep
data/knowledge/code_knowledge/: .gitkeep
data/knowledge/config/: .gitkeep
data/knowledge/general_knowledge/: .gitkeep
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: README_CUSTOMER_MANAGER.md  SessionRuntime 职责说明书.md  architecture.md  configuration_guide.md  deployment.md  flowchart TD    %% ========== 组件定义 ==========    User[用户前端]    Frontend[前端组件]    Bus[MessageBusbr消息总线]    SR[Sessio.md  getting_started.md  h5_interface_design.md  implementation_roadmap.md  interface_design.md  llm_configuration.md  prototype_diagram.md  requirements_specification.md  user_guide.md  事件驱动型智能体会话流程.md  多智能体消息交互流程.md  接口文档 -20251218.md
examples/: advanced_rag.py  advanced_usage.py  custom_agent.py  custom_tools.py  demo_optimized_architecture.py  knowledge_agent.py
resource/: 客户经理角色语料收集表.xlsx  星辰大模型API调用指南.md
scripts/: build_knowledge_base.py  knowledge_cli.py  setup_environment.py  start_server.py
src/: main.py
src/adaptive/: __init__.py  agent_orchestrator.py  evaluator.py  knowledge_manager.py  tool_manager.py
src/agents/: __init__.py  registry.py
src/agents/DTO/: agent_full_config.py
src/agents/base/: __init__.py  abstract_config.py  base_agent.py  base_config.py  base_llm.py  base_message.py  prompt_agent.py
src/agents/core/: __init__.py  agent.py  base_agent.py  config.py  exceptions.py  knowledge_aware_agent.py  llm.py  manager.py  message.py  prompt_agent.py
src/agents/enum/: cognitive_state.py
src/agents/impls/: __init__.py  agent_factory.py  knowledge_aware_agent.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
src/agents/impls/agent/: plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
src/agents/impls/llm/: llm_factory.py
src/agents/prompts/: prompt_template.py  template_manager.py
src/agents/repositories/: __init__.py  agent_repository.py  llm_repository.py  repo_factory.py
src/agents/repositories/models/: __init__.py  agent_config.py  agent_profile.py  config_change_log.py  llm_config.py  message_config.py
src/agents/tools/: __init__.py  async_executor.py  base.py  chain.py  registry.py
src/agents/tools/builtin/: knowledge_tool.py  search.py
src/agents/utils/: llm_stream_helper.py
src/api/: dependencies.py
src/api/v1/endpoints/: agents.py  chat.py
src/api/websocket/: chat_handler.py
src/capabilities/knowledge/: __init__.py  knowledge_base.py
src/capabilities/knowledge/core/: config.py  interface.py  knowledge_base.py
src/capabilities/knowledge/core/schema/: document.py  query.py
src/capabilities/knowledge/embedders/: embedder_base.py  openai_embedder.py
src/capabilities/knowledge/processors/: __init__.py  code_splitter.py  processor_base.py  text_splitter.py
src/capabilities/knowledge/retrievers/: __init__.py  hybrid_retriever.py  retriever_base.py  vector_retriever.py
src/capabilities/knowledge/stores/: chroma_store.py  manager.py  store_base.py
src/capabilities/tools/: base.py  executor.py  registry.py
src/capabilities/tools/builtin/: calculator.py  knowledge_tool.py  search.py  validator.py
src/core/memory/: agent_memory.py  base.py  memory_item.py  memory_manager.py  memory_type.py  session_memory.py
src/core/message/: message_bus.py  message_factory.py  message_item.py  message_target.py  message_type.py
src/core/orchestrator/: orchestrator.py  router.py
src/core/persona/: persona_matrix.py  persona_types.py
src/core/runtime/: state.py
src/core/session/: session.py  session_context.py  session_manager.py  session_runtime.py
src/infrastructure/cache/: cache_manager.py  simple_cache_manager.py
src/infrastructure/config/: config_manager.py
src/infrastructure/llm/impls/: deepseek_llm.py  llm_factory.py  mock_llm.py  openai_llm.py
src/knowledge/core/: base.py  knowledge_base.py
src/knowledge/core/schema/: chunk.py
src/knowledge/embedders/: __init__.py  base.py  bge_embedder.py  local_embedder.py
src/knowledge/processors/: base.py  document_loader.py  metadata_extractor.py
src/knowledge/retrievers/: base.py  bm25_retriever.py  reranker.py
src/knowledge/stores/: base.py  chroma_store.py  manager.py  qdrant_store.py
src/managers/: agent_manager.py
src/services/: agent_service.py  llm_service.py
src/shared/: __init__.py
src/shared/config/: __init__.py  loader.py  manager.py  schema.py
src/shared/exceptions/: __init__.py  agent_errors.py  base.py  knowledge_errors.py  persona_errors.py  tool_errors.py
src/shared/prompts/: template_manager.py
src/shared/utils/: __init__.py  async_utils.py  cache.py  file_utils.py  logger.py  validators.py
tests/: main_test.py
tests/integration/: test_agent_knowledge.py  test_end_to_end.py  test_integration.py  test_rag_flow.py
tests/unit/test_adaptive/: __init__.py  test_adaptive.py
tests/unit/test_agents/: test_agents.py
tests/unit/test_knowledge/: __init__.py  test_knowledge_base.py
tests/unit/test_tools/: test_tools.py
web_demo/: index.html  quantum_sales_chat_real_1216.html  quantum_sales_chat_real_1217.html  quantum_sales_chat_real_1218.html  test_markdown.html
